--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>My Site</title>
 	</head>
 	<body>
-		This is my GitHub Pages Website
+		<h1>This is my GitHub Pages Website</h1>
 	</body>
 </html>
