--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 
 <html lang="en">
 	<head>
-		<title>My Site</title>
+		<link rel="stylesheet" href="styles.css">
+		<title>Brian Gaudino</title>
 	</head>
 	<body>
-		<h1>This is my GitHub Pages Website</h1>
+		<h1>Brian Gaudino</h1>
 	</body>
 </html>
