--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 		<link rel="stylesheet" href="styles.css">
 		<title>Brian Gaudino</title>
 	</head>
-	<body>
-		<h1>Brian Gaudino</h1>
+		<div id="title"><h1>Brian Gaudino</h1></div>
+		<div id="home-links">
+			<a href="music.html" id="musician-link">Musician</a>
+			<a href="education.html">Educator</a>
+			<a href="coding.html">Developer</a>
+		</div>
 	</body>
 </html>
