--- a/education.html
+++ b/education.html
@@ -4,12 +4,15 @@
 	<head>
 		<title>Eductaion</title>
 	</head>
-	<body>
-		<h1>Bio</h1>
-		<p>Brian Gaudino joined the CCGS team in 2016 and was promoted to Director of Education in 2017. In this role, he leads CCGS classroom instruction, trains and supports teachers, develops new programs and initiatives, and serves as the liaison between CCGS and site location teachers and administrators. Under his leadership, CCGS grew the number of students they served from under 100 to nearly 700, and the number of community partners from 3 to 18. In 2020, Brian launched Guitar@Home Academy, which provides free private guitars lessons over video chat to any students that attend a Cleveland school. Before joining CCGS, Brian was a faculty member at the University of Louisiana-Lafayette, where he taught classical and jazz guitar. As a performer, Brian was selected as a member of the inaugural United States Guitar Orchestra, which premiered three new compositions at Carnegie Hall and toured France. In addition to classical, Brian performs in a variety of other genres. He placed fifth in the 2020 international Kiesel Guitars Solo Competition. Brian holds a Master’s degree in guitar performance from UL Lafayette and a Bachelor’s degree in music from The College of William and Mary.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/uiogFVTPNiw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/dZHZl9Mh8zA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/aRax78see7E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/oXWNn5Zn9cY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<body style="height: 100vh; display: grid; grid-template-columns: 300px auto; margin: 0;">
+		<div style="background: black;"></div>
+		<div style="margin: 2% 5%;">
+			<h1>Bio</h1>
+			<p>Brian Gaudino joined the CCGS team in 2016 and was promoted to Director of Education in 2017. In this role, he leads CCGS classroom instruction, trains and supports teachers, develops new programs and initiatives, and serves as the liaison between CCGS and site location teachers and administrators. Under his leadership, CCGS grew the number of students they served from under 100 to nearly 700, and the number of community partners from 3 to 18. In 2020, Brian launched Guitar@Home Academy, which provides free private guitars lessons over video chat to any students that attend a Cleveland school. Before joining CCGS, Brian was a faculty member at the University of Louisiana-Lafayette, where he taught classical and jazz guitar. As a performer, Brian was selected as a member of the inaugural United States Guitar Orchestra, which premiered three new compositions at Carnegie Hall and toured France. In addition to classical, Brian performs in a variety of other genres. He placed fifth in the 2020 international Kiesel Guitars Solo Competition. Brian holds a Master’s degree in guitar performance from UL Lafayette and a Bachelor’s degree in music from The College of William and Mary.</p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/uiogFVTPNiw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/dZHZl9Mh8zA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/aRax78see7E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/oXWNn5Zn9cY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
 	</body>
 </html>
