--- a/secret.html
+++ b/secret.html
@@ -3,7 +3,6 @@
 <html lang="en">
 	<head>
 		<title>Happy Valentine's Day'</title>
-        <meta name="viewport" content="initial-scale=1, width=device-width">
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
 <link href="https://fonts.googleapis.com/css2?family=Ballet&display=swap" rel="stylesheet">
         <style>
@@ -12,7 +11,6 @@
             height: 100vh;
             width: 100vw;
             display: grid;
-            grid-template rows: 5vh 50vh 5vh auto;
             }
 
             div {
@@ -27,7 +25,7 @@
             }
 
             img {
-            width: 20vh;
+            height: 50vh;
             margin: 20px;
             border: 8px solid red;
             border-radius: 50%;
@@ -37,11 +35,9 @@
                 color: pink;
                 background: red;
                 border: 1px solid pink;
-                border-radius: 8px;
-            }
-
-            button:active {
-                outline: none;
+                border-radius: 20px;
+                height: 2em;
+                width: 5em;
             }
 
             h1 {
@@ -112,11 +108,15 @@
 	<body>
         <h1 id="love">I Love You Lucy</h1>
         <div class="container">
-        <div class="heart"></div>
-        <div id="photos"><img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/132929748_10222439884878420_6328008185273334197_o.jpg?_nc_cat=101&ccb=3&_nc_sid=e3f864&_nc_ohc=S6sEJdJMPWEAX-6zX8a&_nc_ht=scontent-ort2-1.xx&oh=db40810234c6de0968f8782a661c4b3e&oe=604EED18"></div>
-        <div class="heart"></div></div>
+            <div class="heart"></div>
+            <div id="photos">
+                <img src="static/0.jpg">
+            </div>
+            <div class="heart"></div>
         </div>
-        <div class="container"><button onclick="photo(); return false;" value="Next">Next</button>
+        <div class="container">
+            <button onclick="down(); return false;">←</button>
+            <button onclick="up(); return false;">→</button>
         </div>
         <h1 id="valentine">Happy Valentine's Day</h1>
         <script>
@@ -128,12 +128,31 @@
             ]
 
             COUNTER = 0;
+            PHOTOS = 15;
 
             function photo() {
-            var photo = document.querySelector('#photos');
+                console.log(COUNTER);
+                var photo = document.querySelector('#photos');
+                photo.innerHTML = '<img src="static/' + COUNTER  + '.jpg">';
+                
+            }
 
-            photo.innerHTML = '<img src="' + PHOTOS[COUNTER % 4] + '">';
-            COUNTER++;
+            function up() {
+                if(COUNTER >= PHOTOS) {
+                    COUNTER = 0;
+                } else {
+                    COUNTER++;
+                }
+                photo();
+            }
+
+            function down() {
+                if(COUNTER < 1) {
+                    COUNTER = PHOTOS;
+                } else {
+                    COUNTER--;
+                }              
+                photo();
             }
         </script>
 	</body>
