--- a/secret.html
+++ b/secret.html
@@ -3,6 +3,8 @@
 <html lang="en">
 	<head>
 		<title>Happy Valentine's Day'</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
 <link href="https://fonts.googleapis.com/css2?family=Ballet&display=swap" rel="stylesheet">
         <style>
@@ -10,25 +12,30 @@
             background: pink;
             height: 100vh;
             width: 100vw;
+            color: red;
+            font-family: 'Pangolin', cursive;
             display: grid;
-            }
-
-            div {
-            margin: 0 100px;
+            grid-template-rows: autp 50vh auto aut0;
             }
 
             .container {
             display: flex;
-            margin: 50px;
-            justify-content: center;
+            justify-content: space-around;
             align-items: center;
             }
 
             img {
-            height: 50vh;
+            float: left;
+            height: 30vh;
+            object-fit: cover;
             margin: 20px;
             border: 8px solid red;
             border-radius: 50%;
+            }
+
+            #buttons {
+                display: flex;
+                justify-content: center;
             }
 
             button {
@@ -40,12 +47,16 @@
                 width: 5em;
             }
 
+            #caption {
+                text-align: center;
+            }
+
             h1 {
             font-size: 4em;
+            font-family: 'Ballet', cursive;
             width: 100vw;
             text-align: center;
-            color: red;
-            font-family: ballet, cursive;
+   
             }
 
             .heart {
@@ -114,7 +125,8 @@
             </div>
             <div class="heart"></div>
         </div>
-        <div class="container">
+        <div id="caption">Blackpot Festival (2013)</div>
+        <div id="buttons">
             <button onclick="down(); return false;">←</button>
             <button onclick="up(); return false;">→</button>
         </div>
@@ -127,13 +139,35 @@
             "https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/132929748_10222439884878420_6328008185273334197_o.jpg?_nc_cat=101&ccb=3&_nc_sid=e3f864&_nc_ohc=S6sEJdJMPWEAX-6zX8a&_nc_ht=scontent-ort2-1.xx&oh=db40810234c6de0968f8782a661c4b3e&oe=604EED18"            
             ]
 
+
             COUNTER = 0;
-            PHOTOS = 15;
+            PHOTOS = 16;
+            CAPTIONS = [
+                "Blackpot Festival (2013)",
+                "New Orleans (2013)",
+                "Yellowstone (2014)",
+                "2015",
+                "Weddings by Dan (2016)",
+                "Just Married (2016)",
+                "Las Vegas (2018)",
+                "Posing with Parrots (2018)",
+                "Somewhere cold (2018)",
+                "Lyon (2019)",
+                "Paris (2019)",
+                "Carnegie Hall (2019)",
+                "Beatrix arrives (2020)",
+                "Pandemic starts (2020)",
+                "Carlisle Reservation (2020)",
+                "Last days in Ohio (2020)",
+                "Michigan Trip (2020)"]
 
             function photo() {
                 console.log(COUNTER);
                 var photo = document.querySelector('#photos');
+                var caption = document.querySelector("#caption");
+                caption.innerHTML = CAPTIONS[COUNTER];
                 photo.innerHTML = '<img src="static/' + COUNTER  + '.jpg">';
+                
                 
             }
 
