--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 
 <html lang="en">
 	<head>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 		<link rel="stylesheet" href="styles.css">
 		<title>Brian Gaudino</title>
 	</head>
-		<div id="title"><h1>Brian Gaudino</h1></div>
-		<div id="home-links">
-			<a href="music.html" id="musician-link">Musician</a>
-			<a href="education.html">Educator</a>
-			<a href="coding.html">Developer</a>
+		<div id="landing-page" class="text-center">
+			<h1>Brian Gaudino</h1>
+			<img src="static/headshot.jpg" id="headshot" class="img-thumbnail" alt="Brian Gaudino">
+			<ul class="nav justify-content-center">
+				<li class="nav-item">
+					<a class="nav-link" href="music.html">Musician</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="education.html">Educator</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="scale.html">Developer</a>
+				</li>
+			</ul>
 		</div>
 	</body>
 </html>
