--- a/scratch.html
+++ b/scratch.html
@@ -33,28 +33,29 @@
             <h1>Brian Gaudino</h1>
             <ul class="nav justify-content-center">
                 <li class="nav-link">
-                    <a id="active-link" class="nav-link" href="music.html">Musician</a>
+                    <a class="nav-link" href="music.html">Musician</a>
                 </li>
                 <li class="nav-link">
                     <a class="nav-link" href="education.html">Educator</a>
                 </li>
                 <li class="nav-link">
-                    <a class="nav-link" aria-current="page" href="scale.html">Developer</a>
+                    <a id="active-link" class="nav-link" aria-current="page" href="scale.html">Developer</a>
                 </li>
             </ul>
         </nav>
         <div class="flex">
             <ul class="nav nav-tabs">
-                <li class="nav-item active"><a class="nav-link" href="music.html">Classical</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Jazz</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Major 3rds Tuning</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Electronic</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Scores</a></li>
+                <li class="nav-item"><a class="nav-link" href="scale.html">Scale Calculator</a></li>
+                <li class="nav-item"><a class="nav-link" href="interval.html">Interval Calculator</a></li>
+                <li class="nav-item"><a class="nav-link" href="chord.html">Chord Calculator</a></li>
+                <li class="nav-item"><a class="nav-link" href="note_id.html">Note Identification</a></li>
+                <li class="nav-item"><a class="nav-link" href="eartraining.html">Interval Ear Training</a></li>
+                <li class="nav-item active"><a class="nav-link" href="scratch.html">Guitar Shark</a></li>
             </ul>
         </div>
         <div class="content">
-            <h1>TODO: for now enjoy this video!</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/oOCKb6AXN40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://scratch.mit.edu/projects/480992383/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+            <br><a href="https://scratch.mit.edu/projects/480992383" target="_blank">Scratch Page</a> 
         </div>
     </body>
 </html>
