--- a/eartraining.html
+++ b/eartraining.html
@@ -68,7 +68,7 @@
             <form onsubmit="intervalID(); return false">
                 <input id="range" type="range" min=1 max=13 value=13 onchange="intervalRange(); return false;">
                 <h4 id="intervalRange">P1 to P8</h4>
-                <select id="direction">
+                <select id="direction" class="form-select">
                 <option value='up'>ascending</option>
                 <option value='down'>descending</option>
                 </select>
