--- a/music.html
+++ b/music.html
@@ -53,8 +53,10 @@
             </ul>
         </div>
         <div class="content">
-            <h1>TODO: for now enjoy this video!</h1>
+            <h1>TODO: for now enjoy these video!</h1>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/oOCKb6AXN40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZcDMbeBJWWg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/A4AaT4wPJeg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </body>
 </html>
