--- a/eartraining.html
+++ b/eartraining.html
@@ -49,7 +49,7 @@
                 <li class="nav-item"><a class="nav-link" href="interval.html">Interval Calculator</a></li>
                 <li class="nav-item"><a class="nav-link" href="chord.html">Chord Calculator</a></li>
                 <li class="nav-item"><a class="nav-link" href="note_id.html">Note Identification</a></li>
-                <li class="nav-active"><a class="nav-link" href="eartraining.html">Interval Ear Training</a></li>
+                <li class="nav-item active"><a class="nav-link" href="eartraining.html">Interval Ear Training</a></li>
                 <li class="nav-item"><a class="nav-link" href="scratch.html">Guitar Shark</a></li>
             </ul>
         </div>
