--- a/education.html
+++ b/education.html
@@ -48,7 +48,7 @@
                 <li class="nav-item active"><a class="nav-link" href="education.html">Bio</a></li>
                 <li class="nav-item"><a class="nav-link">Student Projects</a></li>
                 <li class="nav-item"><a class="nav-link">Scores</a></li>
-                <li class="nav-item"><a class="nav-link">Teaching Philosophy</a></li>
+                <li class="nav-item"><a class="nav-link" href="teaching.html">Teaching Philosophy</a></li>
                 <li class="nav-item"><a class="nav-link">Testimoials</a></li>
                 <li class="nav-item"><a class="nav-link">Media Appearances</a></li>
             </ul>
