--- a/scale.html
+++ b/scale.html
@@ -26,11 +26,13 @@
     <script src="js/play.js"></script>
     <script src="js/helper.js"></script>
     <script src="js/audiosynth.js"></script>
+    
+    <script src="js/nav.js"></script>
 		<title>Brian Gaudino: Developer</title>
 	</head>
 	<body>
         <nav class="navbar navbar-light">
-            <h1>Brian Gaudino</h1>
+            <h1 id="title">Brian Gaudino</h1>
             <ul class="nav justify-content-center">
                 <li class="nav-link">
                     <a class="nav-link" href="music.html">Musician</a>
@@ -41,17 +43,9 @@
                 <li class="nav-link">
                     <a id="active-link" class="nav-link" aria-current="page" href="scale.html">Developer</a>
                 </li>
-            </ul>
+            </ul>     
         </nav>
-        <div class="flex">
-            <ul class="nav nav-tabs">
-                <li class="nav-item active"><a class="nav-link" href="scale.html">Scale Calculator</a></li>
-                <li class="nav-item"><a class="nav-link" href="interval.html">Interval Calculator</a></li>
-                <li class="nav-item"><a class="nav-link" href="chord.html">Chord Calculator</a></li>
-                <li class="nav-item"><a class="nav-link" href="note_id.html">Note Identification</a></li>
-                <li class="nav-item"><a class="nav-link" href="eartraining.html">Interval Ear Training</a></li>
-                <li class="nav-item"><a class="nav-link" href="scratch.html">Guitar Shark</a></li>
-            </ul>
+        <div id="tabs">
         </div>
         <div class="content">
             <h2>Scale Calculator</h2>
