fixed scale tabs

--- a/scale.html
+++ b/scale.html
@@ -46,6 +46,14 @@
             </ul>     
         </nav>
         <div id="tabs">
+            <ul class="nav nav-tabs" id="tabs">
+                <li class="nav-item active"><a class="nav-link" href="scale.html">Scale Calculator</a></li>
+                <li class="nav-item"><a class="nav-link" href="interval.html">Interval Calculator</a></li>
+                <li class="nav-item"><a class="nav-link" href="chord.html">Chord Calculator</a></li>
+                <li class="nav-item"><a class="nav-link" href="note_id.html">Note Identification</a></li>
+                <li class="nav-item"><a class="nav-link" href="eartraining.html">Interval Ear Training</a></li>
+                <li class="nav-item"><a class="nav-link" href="scratch.html">Guitar Shark</a></li>
+            </ul>
         </div>
         <div class="content">
             <h2>Scale Calculator</h2>
